...
                android:id="@+id/instructionsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cocktailNameTextView"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:text="Martini"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="italic" />
        </RelativeLayout>

        <RelativeLayout
...
